<resources>
    <string name="app_name">Week05Day04HW</string>
    <string name="home">Home</string>
    <string name="logout">Log out</string>
    <string name="camera_import">Import</string>
    <string name="gallery">Gallery</string>
    <string name="subscibe">Subscribe</string>
    <string name="tools">Tools</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="username">Feras Alnowiser</string>
    <string name="email">ferasdev@gmail.com</string>
</resources>